<resources>
    <string name="app_name">Software Quiz App</string>
    <string name="tiltle">Software quiz</string>
    <string name="play">Play</string>
    <string name="exit">exit</string>
    <string name="total_questions">Total Questions</string>
    <string name="this_will_be_the_question">This will be the question</string>
    <string name="ans_a">Ans A</string>
    <string name="ans_b">Ans B</string>
    <string name="ans_c">Ans C</string>
    <string name="ans_d">Ans D</string>
    <string name="submit">Submit</string>
    <string name="_00_30">00:30</string>

</resources>