<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.mydevz.softwarequizapp.Play_Activity"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/total_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#252222"
        android:text="@string/total_questions"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/_00_30"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_countdown"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/this_will_be_the_question"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="24dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_back" />

    <LinearLayout
        android:id="@+id/choices_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/ans_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_a"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/ans_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_b"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/ans_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_c"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/ans_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_d"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choices_layout"
        android:layout_marginTop="10dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/submit" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-13dp"
        android:layout_marginBottom="27dp"
        app:srcCompat="@drawable/_f8738d92b994e6cdaa53393c82869a0" />

</RelativeLayout>
