<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mydevz.softwarequizapp.MainActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainLayout">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:text="@string/tiltle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="330dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/btn_play"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
            android:layout_width="375dp"
            android:layout_height="75dp"
            android:backgroundTint="#96AE7B"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/play"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spn1"
            android:layout_width="375dp"
            android:layout_height="75dp"
            android:backgroundTint="#090909" />

        <Button
            android:id="@+id/btn_exit"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
            android:layout_width="375dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#96AE7B"
            android:onClick="onClick"

            android:padding="10dp"
            android:text="@string/exit"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="182dp"
        android:layout_height="104dp"
        app:srcCompat="@drawable/_f8738d92b994e6cdaa53393c82869a0"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>